--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,8 @@
     "babel-preset-react": "^6.5.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.1",
+    "react-router-apply-middleware": "0.0.2",
     "warning": "^2.1.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
